Mobile top image fix
Added a top margin on mobile so the image doesn't go off screen.

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ hr {
   .card {
     flex-direction: column;
     gap: 10em;
+    margin-top: 115px;
     width: 325px;
     height: auto;
   }
